--- a/src/App.css
+++ b/src/App.css
@@ -16,18 +16,15 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-  margin: 0px 10px;
-}
-
 .App-main {
+  background-color: #005f73;
+  color: white;
   flex: 1 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(10px + 4vmin);
 }
 
 .App-footer {
@@ -40,4 +37,17 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.App-link {
+  color: #ee9b00;
+  margin: 0px 10px;
+}
+
+.App-text {
+  margin: 0px 10px;
+}
+
+.App-highlight {
+  color: #ca6702;
 }
