--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  h1,
+  h2,
+  h3 {
+    @apply text-pink-600;
+  }
+  p {
+    @apply mt-4;
+  }
+  span {
+    @apply text-pink-600 font-bold;
+  }
+}
